--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@ http://www.templatemo.com/tm-494-motion
                                     <a class="nav-link" href="#0" data-no="1">Home <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="2">Video 1</a>
+                                    <a class="nav-link" href="#0" data-no="2">TVC Mutex Clip</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="3">Video 2</a>
+                                    <a class="nav-link" href="#0" data-no="3">Short Film</a>
                                 </li>
                                 
                             </ul>
