--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 Motion Template
 http://www.templatemo.com/tm-494-motion
 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- load stylesheets -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">  
     <!-- Google web font "Open Sans" -->
@@ -21,7 +22,11 @@ http://www.templatemo.com/tm-494-motion
     <!-- Hero slider style (https://codyhouse.co/gem/hero-slider/) -->
     <link rel="stylesheet" href="css/magnific-popup.css">                                 
     <!-- Magnific popup style (http://dimsemenov.com/plugins/magnific-popup/) -->
-    <link rel="stylesheet" href="css/templatemo-style.css">                                   
+    <link rel="stylesheet" href="css/templatemo-style.css">        
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    
     <!-- Templatemo style -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -30,6 +35,13 @@ http://www.templatemo.com/tm-494-motion
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
           <![endif]-->
+
+          <style>
+                *{
+                    font-family: "Roboto Condensed", sans-serif;
+                    font-weight: 400;
+                }
+          </style>
 </head>
 
     <body>
@@ -42,7 +54,7 @@ http://www.templatemo.com/tm-494-motion
                 <nav class="navbar">
                     <div class="tm-navbar-bg">
                         
-                        <a style="color: orangered;" class="navbar-brand text-uppercase" href="#"><img class="logooo" src="img/pngfind.com-angry-orchard-logo-png-5748006.png"/>Người Lửa</a>
+                        <a style="color: orangered;" class="navbar-brand " href="#"><img class="logooo" src="img/pngfind.com-angry-orchard-logo-png-5748006.png"/>Người Lửa <i style="padding-left: 10px;" class="fa-solid fa-fire"></i></a>
 
                         <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#tmNavbar">
                             &#9776;
